Table employees {
  employee_id int [pk, increment]
  employee_name varchar(100) [not null]
  position varchar(100)
  hire_date date
  salary decimal(10,2)
}

Table suppliers {
  supplier_id int [pk, increment]
  supplier_name varchar(100) [not null, unique]
  contact_email varchar(100) [not null]
  phone varchar(15) [not null]
}

Table categories {
  category_id int [pk, increment]
  category_name varchar(100) [not null, unique]
  parent_category_id int
  Note: 'Self-referencing for subcategories'
}

Table products {
  product_id int [pk, increment]
  product_name varchar(100) [not null]
  sku varchar(50) [not null, unique]
  price decimal(10,2) [not null]
  cost decimal(10,2) [not null]
  supplier_id int [not null]
  category_id int [not null]
  stock_quantity int [default: 0]
  last_restocked date
}

Table customers {
  customer_id int [pk, increment]
  customer_name varchar(100) [not null]
  email varchar(100) [not null, unique]
  phone varchar(15) [not null]
}

Table addresses {
  address_id int [pk, increment]
  customer_id int [not null]
  address_type varchar(20) [not null]
  street varchar(255) [not null]
  city varchar(100) [not null]
  state varchar(50) [not null]
  zipcode varchar(20) [not null]
}

Table orders {
  order_id int [pk, increment]
  order_date datetime [default: `current_timestamp`]
  customer_id int [not null]
  shipping_address_id int [not null]
  order_status varchar(20) [default: 'Pending']
}

Table order_details {
  order_detail_id int [pk, increment]
  order_id int [not null]
  product_id int [not null]
  quantity int [not null]
  unit_price decimal(10,2) [not null]
}

Table payments {
  payment_id int [pk, increment]
  order_id int [not null]
  payment_date datetime [default: `current_timestamp`]
  payment_method varchar(20) [not null]
  amount decimal(10,2) [not null]
  payment_status varchar(20) [default: 'Pending']
}

Table stock_alerts {
  alert_id int [pk, increment]
  product_id int [not null]
  alert_date datetime [default: `current_timestamp`]
  message text [not null]
}

Ref: suppliers.supplier_id < products.supplier_id
Ref: categories.category_id < products.category_id
Ref: categories.category_id < categories.parent_category_id
Ref: customers.customer_id < addresses.customer_id
Ref: customers.customer_id < orders.customer_id
Ref: addresses.address_id < orders.shipping_address_id
Ref: orders.order_id < order_details.order_id
Ref: products.product_id < order_details.product_id
Ref: orders.order_id < payments.order_id
Ref: products.product_id < stock_alerts.product_id
